--- a/version.yaml
+++ b/version.yaml
@@ -3,3 +3,4 @@ v1.0.2: 'Fix incorrect language strings'
 v1.0.3: 'Set no parent'
 v1.0.4: 'Remove content and meta from .gitignore to avoid removal from package'
 v1.0.5: 'First version of Winter CMS fork'
+v1.0.6: 'Fix composer install directory'
